fixed "some" of the checkstyle warnings